<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ray_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/lay0"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#FFBF00" >

        <RelativeLayout
            android:id="@+id/lay0.1"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="#FF4900" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/ImageView01"
                android:gravity="center_vertical"
                android:text="币种"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icn_select_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lay0.2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@+id/lay0.1" 
            android:gravity="center">

            <RadioGroup
                android:id="@+id/radioG_role_quick"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:gravity="center" >

                <RadioButton
                    android:id="@+id/radioB_buy_quick"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/buy"
                    android:textSize="27sp" />

                <RadioButton
                    android:id="@+id/radioB_sell_quick"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/sell"
                    android:textSize="27sp" />

            </RadioGroup>

            <Spinner
                android:id="@+id/spinner_bizhong"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/radioG_role_quick"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:entries="@array/spinnername" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay3"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_below="@id/lay0" >

        <RelativeLayout
            android:id="@+id/lay3.1"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:background="#FF4900" >

            <TextView
                android:id="@+id/txt_zidingyi"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/imageView1"
                android:gravity="center_vertical"
                android:text="。。。"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icn_select_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lay3.2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/lay3.1"
            android:background="#E0E0E0" >

            <EditText
                android:id="@+id/editText_amount"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:hint="@string/wu"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView_waibi_name"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/editText_amount"
                android:layout_toRightOf="@id/editText_amount"
                android:layout_marginLeft="10dp"
                android:text="@string/meijin" />
  	      <TextView
                android:id="@+id/textView_renminbi_amount"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/tv_equal"
                android:layout_toRightOf="@+id/tv_equal"
                android:layout_marginLeft="5dp"
                android:text="@string/sanshi" />
            <TextView
                android:id="@+id/tv_rateOfMarket_biaoqian_quick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_equal"
                android:text="@string/huilvmaohao" />

            <TextView
                android:id="@+id/tv_rateOfMarket_quick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_equal"
                android:layout_toRightOf="@+id/tv_rateOfMarket_biaoqian_quick"
                android:text="@string/liu" />

            <TextView
                android:id="@+id/tv_equal"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_below="@+id/textView_waibi_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/textView_waibi_name"
                android:text="@string/yuehe"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp" />

          

            <TextView
                android:id="@+id/textView_renminbi_name"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/tv_equal"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView_renminbi_amount"
                android:text="@string/renminbi" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/lay3"
        android:background="#FFBF00" >

        <Button
            android:id="@+id/btn_deal_quick"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/qianqujiaoyi" />

    </RelativeLayout>

</RelativeLayout>