<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativelayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/faceimage"
        android:layout_marginTop="30dp" >

       <TextView
        android:id="@+id/layout1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="52dp"
        android:text="@string/meiyuan"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/faceimage"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icn_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/faceimage"
        android:text="@string/hundred"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txt_benbi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/relativeLayout1"
        android:layout_marginRight="40dp"
        android:text="@string/rmb"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/faceimage"
        android:text="@string/shi"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />
    
  <com.gc.materialdesign.views.LayoutRipple
        android:clickable="true" 
        android:id="@+id/rl_zhifu"
        android:background="#FFF"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_geren"
        android:layout_marginTop="35dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/zhifu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_gerenzhongxin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/d" />
 </com.gc.materialdesign.views.LayoutRipple>

    <com.gc.materialdesign.views.LayoutRipple
        android:background="#FFF"
        android:clickable="true" 
        android:id="@+id/rl_youhuiquan"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/rl_zhifu"
        android:layout_toRightOf="@+id/textView3" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/youhui"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_gerenzhongxin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/e" />
   
    </com.gc.materialdesign.views.LayoutRipple>

    <com.gc.materialdesign.views.LayoutRipple
        android:background="#FFF"
        android:clickable="true" 
        android:id="@+id/rl_anquan"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_above="@+id/rl_zhifu"
        android:layout_toRightOf="@+id/textView3" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/anquanzhongixn"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/a"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/b"  />
</com.gc.materialdesign.views.LayoutRipple>

 <com.gc.materialdesign.views.LayoutRipple
     android:id="@+id/rl_geren"
     android:layout_width="100dp"
     android:layout_height="60dp"
     android:layout_alignRight="@+id/textView3"
     android:layout_below="@+id/textView3"
     android:layout_marginTop="32dp"
     android:background="#FFF"
     android:clickable="true" >

     <TextView
         android:id="@+id/textView5"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:text="@string/gerenzhongxin"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="18sp" />

     <ImageView
         android:id="@+id/img_gerenzhongxin"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/a" />
 </com.gc.materialdesign.views.LayoutRipple>

 <com.gc.materialdesign.views.LayoutRipple
     android:id="@+id/rl_jiaoyi"
     android:layout_width="100dp"
     android:layout_height="60dp"
     android:layout_above="@+id/rl_zhifu"
     android:layout_toRightOf="@+id/relativeLayout1"
     android:background="#FFF"
     android:clickable="true" >

     <TextView
         android:id="@+id/textView5"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:text="@string/jiaoyijilu"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="18sp" />

     <ImageView
         android:id="@+id/img_gerenzhongxin"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/c" />
 </com.gc.materialdesign.views.LayoutRipple>

 <com.gc.materialdesign.views.LayoutRipple
     android:id="@+id/rl_exit"
     android:layout_width="100dp"
     android:layout_height="60dp"
     android:layout_alignLeft="@+id/rl_jiaoyi"
     android:layout_alignTop="@+id/rl_youhuiquan"
     android:background="#FFF"
     android:clickable="true" >

     <TextView
         android:id="@+id/textView5"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:text="@string/tuichu"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="18sp" />

     <ImageView
         android:id="@+id/img_gerenzhongxin"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/f" />
 </com.gc.materialdesign.views.LayoutRipple>
    
</RelativeLayout>