 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativelayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_alignParentTop="true"
            android:src="@drawable/background_progress" />

        <TextView
            android:id="@+id/abc"
            android:layout_width="200dip"
            android:layout_height="35dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/name_a"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="250dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/abc"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/email_a"
            android:textSize="15sp"
             />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="60dip" >

        <ImageView
            android:id="@+id/chilun"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_alignParentTop="true"
            android:src="@drawable/icn_switch" />

        <TextView
            android:id="@+id/asd"
            android:layout_width="100dip"
            android:layout_height="35dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/chilun"
            android:text="@string/shezhi"
            android:textSize="22sp" />

        <com.gc.materialdesign.views.ButtonIcon
            android:id="@+id/buttonIcon"
            android:layout_width="50dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:background="#1E88E5"
            materialdesign:iconDrawable="@drawable/ic_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginTop="10dip" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icn_widget" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView2"
            android:text="@string/kefu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="22sp" />

        <com.gc.materialdesign.views.ButtonIcon
            android:id="@+id/buttonIcon3"
            android:layout_width="50dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            materialdesign:iconDrawable="@drawable/ic_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout4"
        android:layout_marginTop="10dip" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icn_button" />

        <TextView
            android:id="@+id/edi_shiming"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="22sp" />
          <com.gc.materialdesign.views.ButtonIcon
            android:id="@+id/buttonIcon3"
            android:layout_width="50dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            materialdesign:iconDrawable="@drawable/ic_next" />
        
    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout5"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/exit" />
     
</RelativeLayout>